--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -59,6 +59,7 @@
   --text-16:16px;
   --text-17:17px;
   --text-18:18px;
+  --text-19:19px;
   --text-20:20px;
   --text-22:22px;
   --text-24:24px;
